# call-me-maybe

./: .gitignore  Makefile  README.md  pyproject.toml
data/input/: function_calling_tests.json  functions_definition.json
src/: JsonValidator.py  __main__.py  main.py  rendering.py
