[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc>=0.0.4",
    "anyio>=4.13.0",
    "certifi>=2026.4.22",
    "click>=8.3.3",
    "cuda-bindings>=13.2.0",
    "cuda-pathfinder>=1.5.4",
    "cuda-toolkit>=13.2.1",
    "filelock>=3.29.0",
    "flake8>=7.3.0",
    "fsspec>=2026.4.0",
    "h11>=0.16.0",
    "hf-xet>=1.5.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "huggingface-hub>=1.14.0",
    "idna>=3.13",
    "jinja2>=3.1.6",
    "markdown-it-py>=4.2.0",
    "markupsafe>=3.0.3",
    "mdurl>=0.1.2",
    "mpmath>=1.3.0",
    "mypy>=2.0.0",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "nvidia-cublas>=13.4.1.1",
    "nvidia-cuda-cupti>=13.2.75",
    "nvidia-cuda-nvrtc>=13.2.78",
    "nvidia-cuda-runtime>=13.2.75",
    "nvidia-cudnn-cu13>=9.21.1.3",
    "nvidia-cufft>=12.2.0.46",
    "nvidia-cufile>=1.17.1.22",
    "nvidia-curand>=10.4.2.55",
    "nvidia-cusolver>=12.2.0.1",
    "nvidia-cusparse>=12.7.10.1",
    "nvidia-cusparselt-cu13>=0.9.1",
    "nvidia-nccl-cu13>=2.30.4",
    "nvidia-nvjitlink>=13.2.78",
    "nvidia-nvshmem-cu13>=3.6.5",
    "nvidia-nvtx>=13.2.75",
    "packaging>=26.2",
    "pydantic>=2.13.4",
    "pygments>=2.20.0",
    "pyyaml>=6.0.3",
    "regex>=2026.4.4",
    "rich>=15.0.0",
    "safetensors>=0.7.0",
    "setuptools>=82.0.1",
    "shellingham>=1.5.4",
    "sympy>=1.14.0",
    "tokenizers>=0.22.2",
    "torch>=2.9.1",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "triton>=3.5.1",
    "typer>=0.25.1",
    "typing-extensions>=4.15.0",
]
